--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,21 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/
+local/
+
+# Eclipse, Netbeans and IntelliJ files
+.*
+!.gitignore
+!.github
+nbproject
+*.ipr
+*.iws
+*.iml
+
+# generated files
+dependency-reduced-pom.xml
+
+#CI
+!.ci
